[gd_scene load_steps=4 format=3 uid="uid://byhb6cur27gx1"]

[ext_resource type="Script" uid="uid://dsab8lvxb7owf" path="res://Scenes/TestingGrounds/training_dummy.gd" id="1_ctkdq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhp6y"]
size = Vector2(4, 8)

[sub_resource type="CanvasTexture" id="CanvasTexture_mw463"]

[node name="TrainingDummy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ctkdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_nhp6y")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(2.25, 4.25)
scale = Vector2(5.5, 9.5)
texture = SubResource("CanvasTexture_mw463")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false

[node name="NameLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="EffectDisplay" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="DamageNumbers" type="Node2D" parent="."]
